package br.senac.sp.bookverse.model;

public enum ReadingStatus {
    READING,
    COMPLETE
}
