package br.senac.sp.bookverse.model;

public enum Role {
    USER,
    ADMIN
}
